--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/axon": "^2.0.2",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.5.0",
     "copyfiles": "^2.4.1",
     "ts-node": "^10.9.1",
@@ -24,6 +25,11 @@
     "@types/socket.io-client": "^3.0.0",
     "axon": "^2.0.3",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "ipfs": "^0.66.1",
+    "ipfs-core": "^0.14.0",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   }
